# aws-activity-pub

./: .gitignore  .mega-linter.yml  Cargo.toml  Makefile  README.md  cloudformation.yml  deploy.sh  run.sh  run_test.sh  scan_table.sh
.github/workflows/: dependencies.yml  deploy.yml  linter.yml  rust.yml
examples/: create_status.rs  create_user.rs  dynamodb_stream.rs  test.rs
rust/: create_status.rs  create_user.rs
rust/dynamodb_stream/: Cargo.toml  main.rs
rust/dynamodb_stream/src/: main.rs
rust/web_service/: Cargo.toml  main.rs
rust/web_service/routes/: nodeinfo.rs
rust/web_service/routes/users/: followers.rs  following.rs  inbox.rs  mod.rs  outbox.rs
rust/web_service/routes/well_known/: host_meta.rs  webfinger.rs
rust/web_service/src/routes/: mod.rs
rust/web_service/src/routes/api/: statuses.rs
rust/web_service/src/routes/users/: followers.rs  inbox.rs  mod.rs  outbox.rs  statuses.rs
rust/web_service/src/routes/users/statuses/: activity.rs  mod.rs
rust/web_service/src/routes/well_known/: host_meta.rs  mod.rs  webfinger.rs
rust/web_service_test/: Cargo.toml  main.rs  test.rs
rust/web_service_test/src/: assert.rs  main.rs  test.rs
src/: dynamodb.rs  faas_snowflake_id.rs  lib.rs  main.rs  rsa.rs  settings.rs  snowflake.rs  tracing.rs
src/activitypub/: context.rs  digest.rs  headers.rs  mod.rs  object.rs  request.rs  sign.rs  signable.rs  signature.rs  signer.rs  verifier.rs
src/model/: actor.rs  mod.rs  user.rs
src/routes/: api.rs  at.rs  mod.rs  nodeinfo.rs  users.rs  well_known.rs
src/routes/api/: mod.rs  statuses.rs  users.rs
src/routes/users/: followers.rs  following.rs  inbox.rs  mod.rs  outbox.rs  statuses.rs
src/routes/well_known/: host_meta.rs  webfinger.rs
test-cases/: @.json  api_v1_statuses.json  api_v1_users.json  at.json  followers.json  following.json  inbox.json  nodeinfo_2.0.json  outbox.json  users.json  well-known_host-meta.json  well-known_webfinger.json
