[package]
name = "aws-activitypub"
description = "Example minimal ActivityPub serverless implementation in Rust using AWS infrastructure"
repository = "https://github.com/JaderDias/aws-activity-pub"
categories = ["webservice"]
keywords = ["aws", "aws-lambda", "amazon dynamodb"]
version = "0.1.0"
edition = "2021"
license-file = "LICENSE"

[workspace]
members = [
    "rust/dynamodb_stream",
    "rust/library",
    "rust/web_service",
    "rust/web_service_test",
]

[[example]]
name = "create_status"
path = "rust/create_status.rs"

[[example]]
name = "create_user"
path = "rust/create_user.rs"

# Starting in Rust 1.62 you can use `cargo add` to add dependencies 
# to your project.
#
# If you're using an older Rust version,
# download cargo-edit(https://github.com/killercup/cargo-edit#installation) 
# to install the `add` subcommand.
#
# Running `cargo add DEPENDENCY_NAME` will
# add the latest version of a dependency to the list,
# and it will keep the alphabetic ordering for you.

[dev-dependencies]
library = { path = "rust/library/" }
serde_json = { version = "1.0.93" }
tokio = { version = "1", features = ["macros"] }