[package]
categories = ["webservice"]
description = "Example minimal ActivityPub serverless implementation in Rust using AWS infrastructure"
edition = "2021"
keywords = ["aws", "aws-lambda", "amazon dynamodb"]
license-file = "LICENSE"
name = "aws-activitypub"
repository = "https://github.com/JaderDias/aws-activity-pub"
version = "0.1.0"

[workspace]
members = ["rust/*"]

[[example]]
name = "create_status"
path = "rust/create_status.rs"

[[example]]
name = "create_user"
path = "rust/create_user.rs"

# Starting in Rust 1.62 you can use `cargo add` to add dependencies 
# to your project.
#
# If you're using an older Rust version,
# download cargo-edit(https://github.com/killercup/cargo-edit#installation) 
# to install the `add` subcommand.
#
# Running `cargo add DEPENDENCY_NAME` will
# add the latest version of a dependency to the list,
# and it will keep the alphabetic ordering for you.

[dev-dependencies]
library = { path = "rust/library/", version = "0.1.0" }
serde_json = { version = "1.0.93" }
time = "0.3"
tokio = { version = "1.27", features = ["macros"] }
