[package]
categories = ["webservice"]
description = "Lambda that consumes the stream of changes to a DynamoDb table"
edition = "2021"
keywords = ["aws", "aws-lambda", "amazon dynamodb"]
license-file = "../../LICENSE"
readme = "../../README.md"
name = "dynamodb_stream"
repository = "https://github.com/JaderDias/aws-activity-pub"
version = "0.1.0"

# Starting in Rust 1.62 you can use `cargo add` to add dependencies 
# to your project.
#
# If you're using an older Rust version,
# download cargo-edit(https://github.com/killercup/cargo-edit#installation) 
# to install the `add` subcommand.
#
# Running `cargo add DEPENDENCY_NAME` will
# add the latest version of a dependency to the list,
# and it will keep the alphabetic ordering for you.

[dependencies]
aws_lambda_events_extended = "0.1.0"
aws-sdk-dynamodb = "0.25"
http = "0.2.9"
lambda_runtime = "0.7.3"
library = { path = "../library/", version = "0.1.0" }
reqwest = { version = "0.11.14", default-features = false, features = [
    "rustls-tls",
] }
serde_dynamo = { version = "4.2", features = ["aws-sdk-dynamodb+0_25"] }
serde_json = { version = "1.0.93", features = ["raw_value"] }
time = "0.3"
tokio = { version = "1", features = ["macros"] }
tracing = { version = "0.1.37" }

[dev-dependencies]
base64 = "0.21.0"
rsa = "0.8.2"