[package]
categories = ["webservice"]
description = "WebService that implements ActivityPub"
edition = "2021"
keywords = ["aws", "aws-lambda", "amazon dynamodb"]
license-file = "LICENSE"
name = "web_service"
readme = "README.md"
repository = "https://github.com/JaderDias/aws-activity-pub"
version = "0.1.0"

# Starting in Rust 1.62 you can use `cargo add` to add dependencies 
# to your project.
#
# If you're using an older Rust version,
# download cargo-edit(https://github.com/killercup/cargo-edit#installation) 
# to install the `add` subcommand.
#
# Running `cargo add DEPENDENCY_NAME` will
# add the latest version of a dependency to the list,
# and it will keep the alphabetic ordering for you.

[dependencies]
aws-sdk-dynamodb = "0.24.0"
lambda_runtime = "0.7.3"
lambda-web = { version = "0.2.1", features = ["rocket05"] }
library = { path = "../library/" }
rocket = { version = "0.5.0-rc.3", features = ["json"] }
serde_dynamo = { version = "4.0.12", features = ["aws-sdk-dynamodb+0_24"] }
serde_json = { version = "1.0.93", features = ["raw_value"] }
tracing = { version = "0.1.37" }